<resources>
    <string name="app_name">Location</string>
    <string name="Api_Key">AIzaSyAAriQ638C5B_H8FbBHa4yMZka3zVCy0Cg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--    <string name="Api_Key">AIzaSyCSLDGrjkwrVhqe2zs8a7R1FfY7XRKyfBI</string>-->

    <string name="sign_in">Sign in</string>
    <string name="create_account">Create your account on miklaa</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_sign">Or sign in with</string>
    <string name="goggle">Google</string>
    <string name="facebook">Facebook</string>
    <string name="new_miklaa">New Miklaa?</string>
    <string name="sign_up">Sign up</string>
    <string name="skip">SKIP</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="text_one">by submitting,i accept</string>
    <string name="text_two">miklaas</string>
    <string name="text_three">terms of use.</string>
    <string name="already_have">Already have an account?</string>

    <!--    //Facebook-->
    <string name="facebook_app_id">723844442629784</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5247706e7cb2e79e91485e4b7aa7b711</string>
    <string name="facebook_hashkey">Yw0H+maHgnU5R3wFb1U6nrNLsDg=</string>

    <!--    Recycler Text-->

    <string name="id">ID</string>
    <string name="home_type">Home Type</string>
    <string name="price">Price</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="car_parkings">Car Parkings</string>
    <string name="location_name">Location Name</string>
    <string name="description">Description</string>
    <string name="similar_property">Similar Property</string>
    <string name="view_all">View All</string>
</resources>