<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppin_medium"
                    android:text="@string/create_account"
                    android:textColor="@color/sub_head"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="@color/sub_head"                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dialog_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:background="@drawable/custom_design_button"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number"
                    app:boxStrokeWidth="0dp"

                    app:hintTextColor="@color/sub_head"
                    app:boxStrokeWidthFocused="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:enabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dialog_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:background="@drawable/custom_design_button"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_age"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleEnabled="true"
                    app:hintTextColor="@color/sub_head"
                    app:boxStrokeWidthFocused="0dp"
                    android:enabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dialog_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/password"
                        android:paddingLeft="10dp"
                        android:background="@drawable/custom_design_button"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/dialog_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_design"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@id/tv_password"
                    app:layout_constraintTop_toBottomOf="@id/tv_password" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>





    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>