<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".firebase.LoginActivity">


   <ScrollView

       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/ctll"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <ProgressBar
               android:id="@+id/prgbar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:visibility="gone"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />



           <ImageView
               android:id="@+id/img_logo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/logo_final"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="10dp"
               />

           <TextView
               android:id="@+id/tv_sign_in"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sign_in"
               app:layout_constraintTop_toBottomOf="@id/img_logo"
               app:layout_constraintStart_toStartOf="@id/img_logo"
               app:layout_constraintEnd_toEndOf="@id/img_logo"
               android:fontFamily="@font/popin_bold"
               android:textSize="23sp"
               android:textColor="@color/black"
               />
           <TextView
               android:id="@+id/tv_create_account"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
               app:layout_constraintStart_toStartOf="@id/tv_sign_in"
               app:layout_constraintEnd_toEndOf="@id/tv_sign_in"
               android:text="@string/create_account"
               android:textColor="@color/sub_head"
               android:fontFamily="@font/poppin_medium"
               />

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/ctl_one"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="30dp"
               android:paddingBottom="30dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tv_create_account">

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/tv_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginTop="30dp"
                   app:boxStrokeWidth="0dp"
                   app:hintTextColor="@color/sub_head"
                   app:boxStrokeWidthFocused="0dp"
                   android:enabled="true">
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/et_email_login"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/email"
                       android:paddingLeft="10dp"
                       android:background="@drawable/custom_design_button"/>
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/tv_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginTop="10dp"
                   app:layout_constraintTop_toBottomOf="@+id/tv_email"
                   app:boxStrokeWidth="0dp"
                   app:passwordToggleEnabled="true"
                   app:hintTextColor="@color/sub_head"
                   app:boxStrokeWidthFocused="0dp"

                   android:enabled="true">
                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/et_password_login"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/password"
                       android:paddingLeft="10dp"
                       android:background="@drawable/custom_design_button"/>
               </com.google.android.material.textfield.TextInputLayout>

               <TextView
                   android:id="@+id/tv_forgot_password"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:fontFamily="@font/poppins_regular"
                   android:text="@string/forgot_password"
                   android:textColor="@color/orange"
                   android:textSize="13sp"
                   app:layout_constraintEnd_toEndOf="@id/tv_password"
                   app:layout_constraintStart_toStartOf="@id/tv_password"
                   app:layout_constraintTop_toBottomOf="@+id/tv_password" />

               <Button
                   android:id="@+id/btn_login"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:background="@drawable/button_design"
                   android:text="@string/sign_in"
                   android:textAllCaps="false"
                   app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
                   app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

               <TextView
                   android:id="@+id/tv_or_sign_in"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:text="@string/or_sign"
                   android:textAlignment="center"
                   android:textColor="@color/sub_head"
                   android:textSize="15sp"
                   app:layout_constraintEnd_toEndOf="@id/btn_login"
                   app:layout_constraintStart_toStartOf="@id/btn_login"
                   app:layout_constraintTop_toBottomOf="@id/btn_login" />

               <LinearLayout
                   android:id="@+id/ll"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/tv_or_sign_in"
                   app:layout_constraintStart_toStartOf="parent"
                   android:weightSum="2"
                   android:padding="10dp">

                   <androidx.cardview.widget.CardView
                       android:id="@+id/cd_google"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_marginTop="5dp"
                       android:layout_marginBottom="5dp"
                       android:background="@drawable/custom_design_button"
                       android:layout_weight="1"
                       android:padding="10dp"
                       android:elevation="15dp"
                       app:cardCornerRadius="25dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent">

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="15dp"
                           android:src="@drawable/google" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="5dp"
                           android:layout_marginStart="40dp"
                           android:layout_marginTop="9dp"
                           android:layout_marginEnd="10dp"
                           android:layout_marginBottom="10dp"
                           android:fontFamily="@font/poppin_medium"
                           android:text="@string/goggle"
                           android:textColor="@color/black"
                           android:textSize="15sp" />


                   </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:id="@+id/facebook"
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_marginStart="10dp"
                       android:layout_marginTop="5dp"
                       android:layout_marginBottom="5dp"
                       android:background="@drawable/custom_design_button"
                       android:layout_weight="1"
                       android:padding="10dp"
                       android:elevation="15dp"
                       app:cardCornerRadius="25dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent">

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="15dp"
                           android:src="@drawable/facebook" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="5dp"
                           android:layout_marginStart="40dp"
                           android:layout_marginTop="9dp"
                           android:layout_marginEnd="10dp"
                           android:layout_marginBottom="10dp"
                           android:fontFamily="@font/poppin_medium"
                           android:text="@string/facebook"
                           android:textColor="@color/black"
                           android:textSize="15sp" />


                   </androidx.cardview.widget.CardView>

               </LinearLayout>

<!--               <com.facebook.login.widget.LoginButton-->
<!--                   android:id="@+id/fblogin"-->
<!--                   android:layout_width="200dp"-->
<!--                   android:layout_height="100dp"-->

<!--                   app:layout_constraintStart_toStartOf="parent"-->
<!--                   app:layout_constraintTop_toBottomOf="@+id/ll"/>-->


               <TextView
                   android:id="@+id/tv_new_miklaa"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="30dp"
                   android:fontFamily="@font/poppin_medium"
                   android:text="@string/new_miklaa"
                   android:textColor="@color/black"
                   android:textSize="13dp"
                   android:layout_marginRight="45dp"
                   app:layout_constraintEnd_toEndOf="@id/ll"
                   app:layout_constraintStart_toStartOf="@id/ll"
                   app:layout_constraintTop_toBottomOf="@id/ll" />

               <TextView
                   android:id="@+id/tv_sign_up"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="6dp"
                   android:fontFamily="@font/poppin_medium"
                   android:text="@string/sign_up"
                   android:textColor="@color/orange"
                   android:textSize="13sp"
                   app:layout_constraintBottom_toBottomOf="@id/tv_new_miklaa"
                   app:layout_constraintStart_toEndOf="@id/tv_new_miklaa"
                   app:layout_constraintTop_toTopOf="@id/tv_new_miklaa" />


               <androidx.cardview.widget.CardView
                   android:id="@+id/skip"
                   android:layout_width="0dp"
                   android:layout_height="50dp"
                   android:layout_marginTop="15dp"
                   android:layout_marginBottom="5dp"
                   android:paddingBottom="5dp"
                   android:background="@drawable/custom_design_button"
                   android:layout_weight="1"
                   android:padding="5dp"
                   android:elevation="15dp"
                   app:cardCornerRadius="25dp"
                   android:layout_marginStart="35dp"
                   app:layout_constraintStart_toStartOf="@+id/tv_new_miklaa"
                   app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
                   app:layout_constraintBottom_toBottomOf="parent"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="5dp"
                       android:layout_marginStart="10dp"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       android:layout_marginBottom="10dp"
                       android:fontFamily="@font/poppin_medium"
                       android:text="@string/skip"
                       android:textColor="@color/black"
                       android:textSize="15sp" />


               </androidx.cardview.widget.CardView>

           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>